--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
           r.eventCounter = 1;
           r.a = 360;
           r.a2 = 1;
+          r.eventCounter++;
         } else if (r.time >= sec("01:00") && r.eventCounter < 2) {
           r.planets.venus.visible = true;
-          r.eventCounter = 2;
+          r.eventCounter++;
         } else if (r.time >= sec("02:00") && r.eventCounter < 3) {
           animation({
             targets: r,
@@ -114,17 +115,17 @@
             easing: "easeInOutSine",
           });
           r.planets.mercury.visible = true;
-          r.eventCounter = 3;
+          r.eventCounter++;
         } else if (r.time >= sec("03:00") && r.eventCounter < 4) {
           r.planets.mars.visible = true;
-          r.eventCounter = 8;
+          r.eventCounter++;
         } else if (r.time >= sec("04:00") && r.eventCounter < 5) {
           r.planets.jupiter.visible = true;
-          r.eventCounter = 5;
+          r.eventCounter++;
         } else if (r.time >= sec("05:00") && r.eventCounter < 6) {
           r.orbitsOffsetX = 5;
           r.planets.saturn.visible = true;
-          r.eventCounter = 6;
+          r.eventCounter++;
         } else if (r.time >= sec("06:00") && r.eventCounter < 7) {
           r.orbitsOffsetX = 6;
           animation({
@@ -138,25 +139,25 @@
           r.planets.venus_v2.visible = true;
           r.planets.jupiter_j12.visible = true;
           r.planets.saturn_s12.visible = true;
-          r.eventCounter = 7;
+          r.eventCounter++;
         } else if (r.time >= sec("07:00") && r.eventCounter < 8) {
           // 7:00
           r.planets.mercury_m4.visible = true;
           r.planets.jupiter_j14.visible = true;
           r.planets.saturn_s14.visible = true;
-          r.eventCounter = 8;
+          r.eventCounter++;
         } else if (r.time >= sec("08:00") && r.eventCounter < 9) {
           // 8:00
           r.planets.mercury_m8.visible = true;
           r.planets.saturn_s18.visible = true;
-          r.eventCounter = 9;
+          r.eventCounter++;
         } else if (r.time >= sec("09:00") && r.eventCounter < 10) {
           // 9:00
           r.planets.saturn.visible = false;
           r.planets.jupiter.visible = false;
           r.planets.venus.visible = false;
           r.planets.mercury.visible = false;
-          r.eventCounter = 10;
+          r.eventCounter++;
         } else if (r.time >= sec("10:00") && r.eventCounter < 11) {
           // 10:00
           r.planets.venus_v2.visible = false;
@@ -164,11 +165,11 @@
           r.planets.jupiter_j12.visible = false;
           r.planets.venus_v2.visible = false;
           r.planets.venus_v4.visible = true;
-          r.eventCounter = 11;
+          r.eventCounter++;
         } else if (r.time >= sec("10:30") && r.eventCounter < 12) {
           r.planets.venus_v4.visible = false;
           r.planets.venus_v8.visible = true;
-          r.eventCounter = 12;
+          r.eventCounter++;
         } else if (r.time >= sec("11:00") && r.eventCounter < 13) {
           // 11:00
           animation({
@@ -178,7 +179,7 @@
             easing: "easeInOutSine",
           });
           r.planets.saturn_s14.visible = false;
-          r.eventCounter = 13;
+          r.eventCounter++;
         } else if (r.time >= sec("11:30") && r.eventCounter < 14) {
           animation({
             targets: r,
@@ -189,30 +190,75 @@
             easing: "linear",
           });
           r.cometonics.visible = true;
-          r.eventCounter = 14;
-        } else if (r.time >= sec("12:00") && r.eventCounter < 15) {
+          r.eventCounter++;
+          // Placeholder events for cometonics
+        } else if (r.time >= sec("11:40") && r.eventCounter < 15) {
+          r.eventCounter++;
+        } else if (r.time >= sec("11:50") && r.eventCounter < 16) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:00") && r.eventCounter < 17) {
           // Messiermusics 0:00
-          animation({
-            targets: r,
-            orbitsOffsetY: 2,
-            orbitsRadialVelocity: -2,
-            // orbitsAngularVelocity: 2,
-            duration: r.getDuration("01:00"),
-            easing: "linear",
-          });
           Object.keys(r.planets).forEach(
             (key) => (r.planets[key].visible = false)
           );
-          r.eventCounter = 15;
-        } else if (r.time >= sec("14:30") && r.eventCounter < 16) {
-          animation({
-            orbitsAngularVelocity: 1,
-            duration: r.getDuration("01:00"),
-            easing: "linear",
-            targets: r,
-          });
-          r.eventCounter = 16;
-        } else if (r.time >= sec("15:30") && r.eventCounter < 17) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:10") && r.eventCounter < 18) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:20") && r.eventCounter < 19) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:30") && r.eventCounter < 20) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:40") && r.eventCounter < 21) {
+          r.eventCounter++;
+        } else if (r.time >= sec("12:50") && r.eventCounter < 22) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:00") && r.eventCounter < 23) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:10") && r.eventCounter < 24) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:20") && r.eventCounter < 25) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:30") && r.eventCounter < 26) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:40") && r.eventCounter < 27) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("13:50") && r.eventCounter < 28) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("14:00") && r.eventCounter < 29) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("14:10") && r.eventCounter < 30) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("14:20") && r.eventCounter < 31) {
+          //
+          r.eventCounter++;
+        } else if (r.time >= sec("14:30") && r.eventCounter < 32) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("14:40") && r.eventCounter < 33) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("14:50") && r.eventCounter < 34) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("15:00") && r.eventCounter < 35) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("15:10") && r.eventCounter < 36) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("15:20") && r.eventCounter < 37) {
+          r.eventCounter++;
+          //
+        } else if (r.time >= sec("15:30") && r.eventCounter < 38) {
           // Enable clusters and nebulas
           r.messier.clusters.visible = true;
           // Fade out cometronics
@@ -229,13 +275,13 @@
             duration: r.getDuration("00:10"),
             easing: "linear",
           });
-          r.eventCounter = 17;
-        } else if (r.time >= sec("15:40") && r.eventCounter < 18) {
+          r.eventCounter++;
+        } else if (r.time >= sec("15:40") && r.eventCounter < 39) {
           // Clusters are still playing...
           // Cometronics done fading, hide
           r.cometonics.visible = false;
-          r.eventCounter = 18;
-        } else if (r.time >= sec("16:30") && r.eventCounter < 19) {
+          r.eventCounter++;
+        } else if (r.time >= sec("16:30") && r.eventCounter < 40) {
           // Enable nebulas
           r.messier.nebulas.visible = true;
           // Fade in nebulas
@@ -252,15 +298,15 @@
             duration: r.getDuration("00:10"),
             easing: "linear",
           });
-          r.eventCounter = 19;
+          r.eventCounter++;
           //
-        } else if (r.time >= sec("16:40") && r.eventCounter < 19) {
+        } else if (r.time >= sec("16:40") && r.eventCounter < 41) {
           // Nebulas are still playing...
           // Clusters done fading, hide
           r.messier.clusters.visible = false;
-          r.eventCounter = 19;
+          r.eventCounter++;
           //
-        } else if (r.time >= sec("17:50") && r.eventCounter < 20) {
+        } else if (r.time >= sec("17:50") && r.eventCounter < 42) {
           // Enable clusters2
           r.messier.clusters2.visible = true;
           // Fade in clusters2
@@ -277,13 +323,13 @@
             duration: r.getDuration("00:10"),
             easing: "linear",
           });
-          r.eventCounter = 20;
-        } else if (r.time >= sec("18:00") && r.eventCounter < 20) {
+          r.eventCounter++;
+        } else if (r.time >= sec("18:00") && r.eventCounter < 43) {
           // clusters2 are still playing...
           // nebulas done fading, hide
           r.messier.nebulas.visible = false;
-          r.eventCounter = 20;
-        } else if (r.time >= sec("21:00") && r.eventCounter < 21) {
+          r.eventCounter++;
+        } else if (r.time >= sec("21:00") && r.eventCounter < 44) {
           // Enable galaxies
           r.messier.galaxies.visible = true;
           // Fade in galaxies
@@ -300,23 +346,60 @@
             duration: r.getDuration("00:10"),
             easing: "linear",
           });
-          r.eventCounter = 21;
-        } else if (r.time >= sec("21:10") && r.eventCounter < 21) {
+          r.eventCounter++;
+        } else if (r.time >= sec("21:10") && r.eventCounter < 45) {
           // galaxies are still playing...
           // clusters2 done fading, hide
           r.messier.clusters2.visible = false;
-          r.eventCounter = 21;
-        } else if (r.time >= sec("23:50") && r.eventCounter < 22) {
-          r.messier.galaxies.visible = false;
+          r.eventCounter++;
+        } else if (r.time >= sec("23:40") && r.eventCounter < 46) {
+          // Enable superclusters
           r.messier.superclusters.visible = true;
-          r.eventCounter = 23;
-        } else if (r.time >= sec("25:00") && r.eventCounter < 24) {
-          r.messier.superclusters.visible = false;
+          // Fade in superclusters
+          animation({
+            targets: r.messier.superclusters,
+            opacity: 1,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          // Fade out galaxies
+          animation({
+            targets: r.messier.galaxies,
+            opacity: 0,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          r.eventCounter++;
+        } else if (r.time >= sec("23:50") && r.eventCounter < 47) {
+          // superclusters are still playing...
+          // galaxies done fading, hide
+          r.messier.galaxies.visible = false;
+          r.eventCounter++;
+        } else if (r.time >= sec("24:50") && r.eventCounter < 48) {
           r.galactic.radiogalaxies.visible = true;
-          r.eventCounter = 24;
-        } else if (r.time >= sec("25:30") && r.eventCounter < 25) {
-          r.orbitsAngularVelocity = 2;
-          r.orbitsColor = "#fff..#aaf,#fff,#fff,#fff";
+          // Fade in radiogalaxies
+          animation({
+            targets: r.galactic.radiogalaxies,
+            opacity: 1,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          // Fade out superclusters
+          animation({
+            targets: r.messier.superclusters,
+            opacity: 0,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          r.eventCounter++;
+        } else if (r.time >= sec("25:00") && r.eventCounter < 49) {
+          // radiogalaxies are still playing...
+          // superclusters done fading, hide
+          r.messier.superclusters.visible = false;
+          r.eventCounter++;
+        } else if (r.time >= sec("25:30") && r.eventCounter < 50) {
+          // TODO: scale bigbang instead!
+          // Going to scale 0 in 2 min
           animation({
             targets: r,
             globalScale: 0,
@@ -324,17 +407,64 @@
             easing: "linear",
           });
           r.bigbang.visible = true;
-          r.eventCounter = 25;
-        } else if (r.time >= sec("26:00") && r.eventCounter < 26) {
-          r.galactic.radiogalaxies.visible = false;
+          r.eventCounter++;
+        } else if (r.time >= sec("25:50") && r.eventCounter < 51) {
           r.galactic.quasars.visible = true;
-          r.eventCounter = 26;
-        } else if (r.time >= sec("26:45") && r.eventCounter < 27) {
+          // Fade in quasars
+          animation({
+            targets: r.galactic.quasars,
+            opacity: 1,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          // Fade out radiogalaxies
+          animation({
+            targets: r.messier.radiogalaxies,
+            opacity: 0,
+            duration: r.getDuration("00:10"),
+            easing: "linear",
+          });
+          r.eventCounter++;
+        } else if (r.time >= sec("26:00") && r.eventCounter < 52) {
+          // quasars  are still playing...
+          // radiogalaxies done fading, hide
+          r.galactic.radiogalaxies.visible = false;
+          r.eventCounter++;
+        } else if (r.time >= sec("26:45") && r.eventCounter < 53) {
           r.galactic.quasars.visible = false;
-          r.eventCounter = 27;
-        } else if (r.time >= sec("27:30") && r.eventCounter < 28) {
+          // TODO: Bring all in
+          // Object.keys(r.planets).forEach((key) => {
+          //   r.planets[key].visible = true;
+          //   animation({
+          //     targets: r.planets[key],
+          //     opacity: 1,
+          //     duration: r.getDuration("00:10"),
+          //     easing: "linear",
+          //   });
+          // });
+          // Object.keys(r.messier).forEach((key) => {
+          //   r.messier[key].visible = true;
+          //   animation({
+          //     targets: r.messier[key],
+          //     opacity: 1,
+          //     duration: r.getDuration("00:10"),
+          //     easing: "linear",
+          //   });
+          // });
+          // Object.keys(r.galactic).forEach((key) => {
+          //   r.galactic[key].visible = true;
+          //   animation({
+          //     targets: r.galactic[key],
+          //     opacity: 1,
+          //     duration: r.getDuration("00:10"),
+          //     easing: "linear",
+          //   });
+          // });
+          r.eventCounter++;
+        } else if (r.time >= sec("27:30") && r.eventCounter < 54) {
           r.bigbang.visible = false;
-          r.eventCounter = 28;
+          r.eventCounter++;
+        } else if (r.time >= sec("27:30") && r.eventCounter < 55) {
         }
       };
 
