--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
       const planets = generatePlanets();
 
-      const cometonics = { visible: false, opacity: 1 };
+      const cometonics = { visible: false, opacity: 0 };
 
-      const defaultModelScale = 0.008;
+      const defaultModelScale = 0.0045;
 
       const messier = {
         clusters: { visible: false, scale: defaultModelScale, opacity: 0 },
@@ -68,6 +68,10 @@
         visible: false,
       };
 
+      const planetsOrbits = {
+        opacity: 1,
+      };
+
       const r = reactive({
         time: 0,
         eventCounter: 0,
@@ -84,14 +88,6 @@
         globalRotation: 90,
         globalScale: 1,
         userZMultipler: 0,
-
-        orbitsOpacity: 0,
-        orbitsOffsetX: 1,
-        orbitsOffsetY: 0,
-        orbitsRadialVelocity: 1,
-        orbitsAngularVelocity: 0,
-        orbitsColor: "#fff",
-        getOrbitsParticles, // From orbits
       });
 
       const onMessage = (data) => {
@@ -101,89 +97,182 @@
         }
         if (r.time >= 0 && r.eventCounter < 1) {
           r.planets.earth.visible = true;
+          animation({
+            targets: r.planets.earth,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter = 1;
           r.a = 360;
           r.a2 = 1;
           r.eventCounter++;
         } else if (r.time >= sec("01:00") && r.eventCounter < 2) {
           r.planets.venus.visible = true;
+          animation({
+            targets: r.planets.venus,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("02:00") && r.eventCounter < 3) {
-          animation({
-            targets: r,
-            orbitsOffsetX: 10,
-            duration: r.getDuration("04:00"),
-            easing: "easeInOutSine",
-          });
           r.planets.mercury.visible = true;
+          animation({
+            targets: r.planets.mercury,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("03:00") && r.eventCounter < 4) {
           r.planets.mars.visible = true;
+          animation({
+            targets: r.planets.mars,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("04:00") && r.eventCounter < 5) {
           r.planets.jupiter.visible = true;
+          animation({
+            targets: r.planets.jupiter,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("05:00") && r.eventCounter < 6) {
-          r.orbitsOffsetX = 5;
           r.planets.saturn.visible = true;
+          animation({
+            targets: r.planets.saturn,
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("06:00") && r.eventCounter < 7) {
-          r.orbitsOffsetX = 6;
           r.planets.mercury_m2.visible = true;
           r.planets.venus_v2.visible = true;
           r.planets.jupiter_j12.visible = true;
           r.planets.saturn_s12.visible = true;
+          animation({
+            targets: [
+              r.planets.mercury_m2,
+              r.planets.venus_v2,
+              r.planets.jupiter_j12,
+              r.planets.saturn_s12,
+            ],
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("07:00") && r.eventCounter < 8) {
           // 7:00
           r.planets.mercury_m4.visible = true;
           r.planets.jupiter_j14.visible = true;
           r.planets.saturn_s14.visible = true;
+          animation({
+            targets: [
+              r.planets.mercury_m4,
+              r.planets.venus_v2,
+              r.planets.jupiter_j14,
+              r.planets.saturn_s14,
+            ],
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("08:00") && r.eventCounter < 9) {
           // 8:00
           r.planets.mercury_m8.visible = true;
           r.planets.saturn_s18.visible = true;
+          animation({
+            targets: [r.planets.mercury_m8, r.planets.saturn_s18],
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
         } else if (r.time >= sec("09:00") && r.eventCounter < 10) {
-          // 9:00
-          r.planets.saturn.visible = false;
-          r.planets.jupiter.visible = false;
-          r.planets.venus.visible = false;
-          r.planets.mercury.visible = false;
+          animation({
+            targets: [
+              r.planets.saturn,
+              r.planets.jupiter,
+              r.planets.venus,
+              r.planets.mercury,
+            ],
+            opacity: 0,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
+          // r.planets.saturn.visible = false;
+          // r.planets.jupiter.visible = false;
+          // r.planets.venus.visible = false;
+          // r.planets.mercury.visible = false;
           r.eventCounter++;
         } else if (r.time >= sec("10:00") && r.eventCounter < 11) {
-          // 10:00
-          r.planets.venus_v2.visible = false;
-          r.planets.saturn_s12.visible = false;
-          r.planets.jupiter_j12.visible = false;
-          r.planets.venus_v2.visible = false;
+          animation({
+            targets: [
+              r.planets.venus_v2,
+              r.planets.saturn_s12,
+              r.planets.jupiter_j12,
+              r.planets.venus_v2,
+            ],
+            opacity: 0,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
+          animation({
+            targets: [r.planets.venus_v4],
+            opacity: 0,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
+          // r.planets.venus_v2.visible = false;
+          // r.planets.saturn_s12.visible = false;
+          // r.planets.jupiter_j12.visible = false;
+          // r.planets.venus_v2.visible = false;
           r.planets.venus_v4.visible = true;
           r.eventCounter++;
         } else if (r.time >= sec("10:30") && r.eventCounter < 12) {
-          r.planets.venus_v4.visible = false;
           r.planets.venus_v8.visible = true;
+          animation({
+            targets: [r.planets.venus_v8],
+            opacity: 1,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
+          animation({
+            targets: [r.planets.venus_v4],
+            opacity: 0,
+            duration: r.getDuration("00:05"),
+            easing: "easeInQuad",
+          });
+          //r.planets.venus_v4.visible = false;
           r.eventCounter++;
+          //
         } else if (r.time >= sec("11:00") && r.eventCounter < 13) {
-          // 11:00
           animation({
             targets: r,
             globalRotation: 0,
             duration: r.getDuration("01:00"),
             easing: "easeInOutSine",
           });
-          r.planets.saturn_s14.visible = false;
+          //r.planets.saturn_s14.visible = false;
           r.eventCounter++;
         } else if (r.time >= sec("11:30") && r.eventCounter < 14) {
-          animation({
-            targets: r,
-            orbitsOffsetY: 1,
-            orbitsRadialVelocity: -1,
-            //  orbitsAngularVelocity: 1,
-            duration: r.getDuration("01:00"),
-            easing: "linear",
-          });
           r.cometonics.visible = true;
+          // TODO: Should cometronics fade in earlier and planets go out later?
+          animation({
+            targets: r.cometonics,
+            opacity: 1,
+            duration: r.getDuration("00:10"),
+            easing: "easeInQuad",
+          });
           r.eventCounter++;
           // Placeholder events for cometonics
         } else if (r.time >= sec("11:40") && r.eventCounter < 15) {
@@ -506,19 +595,7 @@
         :scale="{x: r.globalScale, y: r.globalScale, z: r.globalScale}"
         :rotation="{x: r.globalRotation, y: 0, z: 0}"
       >
-        <a-entity :scale="{x: 0.01, y: 0.01, z: 0.01}" :opacity="0">
-          <!-- <a-entity
-            v-for="p,key,i in r.planets"
-            :position="{ x: 0, y: 0 + (i * r.orbitsOffsetY), z: 0 }"
-            :scale="p.outside.scale"
-            :animation="p.outside.animation"
-          >
-            <a-entity
-              rotation="90 0 0"
-              :sprite-particles="r.getOrbitsParticles(p.inside.position.z)"
-            ></a-entity>
-          </a-entity> -->
-
+        <a-entity :scale="{x: 0.01, y: 0.01, z: 0.01}">
           <a-entity
             v-for="p,key in r.planets"
             :position="p.outside.position"
@@ -527,11 +604,11 @@
             :visible="p.visible"
           >
             <a-entity
-              :random-lines="{radius: p.inside.position.z, opacity: 0.5, degrees: 1440, randomness: 1}"
+              :random-lines="{radius: p.inside.position.z, opacity: 0.7 * p.opacity, degrees: 360 * 5, randomness: 2}"
               rotation="0 0 0"
             ></a-entity>
             <a-entity
-              :random-lines="{radius: p.inside.position.z, opacity: 0.5, degrees: 360, randomness: 2}"
+              :random-lines="{radius: p.inside.position.z, opacity: 0.7 * p.opacity, degrees: 360 * 2, randomness: 2.5}"
               rotation="0 0 0"
             ></a-entity>
             <a-entity
@@ -540,6 +617,7 @@
               :rotation="p.inside.rotation"
               :scale="p.inside.scale"
               :animation="p.inside.animation"
+              :model-opacity="{opacity: p.opacity}"
             ></a-entity>
           </a-entity>
         </a-entity>
@@ -672,7 +750,14 @@
 
     <div
       class="dev-overlay"
-      style="position: fixed; top: 16px; right: 16px; z-index: 10000"
+      style="
+        position: fixed;
+        top: 16px;
+        right: 16px;
+        z-index: 10000;
+        overflow: auto;
+        height: 100%;
+      "
     >
       Global rotation: {{ String(r.globalRotation).split('.')[0] }}
       <input
@@ -693,6 +778,9 @@
       />
       Playback speed (ms) <input v-model.number="r.globalFrequency" />
       <pre>{{ { cometonics: r.cometonics } }}</pre>
+      <pre>
+{{ Object.fromEntries(Object.keys(r.planets).map(key => [key, r.planets[key].opacity])) }}
+      </pre>
       <pre>{{ r.messier }}</pre>
       <pre>{{ r.galactic }}</pre>
     </div>
