--- a/particles_editor.html
+++ b/particles_editor.html
@@ -40,7 +40,8 @@
       });
 
       const data2 = reactive({
-        color: "#ff",
+        color: "#fff",
+        opacity: {a: 0.5, b: 1},
         radialType: "circleXZ",
         spawnRate: 100,
         lifeTime: 1000,
@@ -133,10 +134,10 @@
       <a-entity position="0 0 -20">
         <!-- <a-entity :sprite-particles="normalizeParticles(data2)"></a-entity> -->
 
-        <a-entity
+        <a-entity :rotation="box.rotation"
           v-for="y in [1,2,3,4]"
-          :position="{x: 0, y: y - 5, z: 0}"
-          :sprite-particles="normalizeParticles({...data2, radialPosition: { a: y, b: y }, radialVelocity: { a: 0, b: -0.1 },angularVelocity: { a: 10, b: -10, c: 10 }})"
+          :position="{x: 0, y: (y - 5) / 10, z: 0}"
+          :sprite-particles="normalizeParticles({...data2, radialPosition: { a: y, b: y }, radialVelocity: { a: 0, b: -10, c: 10 },angularVelocity: { a: 10, b: -10, c: 0 }})"
         ></a-entity>
 
         <!-- <a-entity
@@ -164,7 +165,7 @@
       </a-assets>
     </a-scene>
 
-    <div style="position: fixed; top: 16px; left: 16px">
+    <!-- <div style="position: fixed; top: 16px; left: 16px">
       <p>Rotation: {{ angle }}deg</p>
       <input
         type="range"
@@ -172,9 +173,9 @@
         max="90"
         style="margin-bottom: 8px"
       />
-      <div v-for="field, key in data" style="padding-bottom: 8px">
+      <div v-for="field, key in data2" style="padding-bottom: 8px">
         {{ key }}
-        <div v-if="Array.isArray(field)">
+        <div v-if="field.a !== undefined">
           <div
             v-for="col,i in field"
             style="display: flex; align-items: center; gap: 8px"
@@ -207,7 +208,7 @@
         </div>
       </div>
       <!-- <pre>{{ normalizeData(data) }}</pre> -->
-    </div>
+    </div> -->
 
     <div style="position: fixed; top: 16px; right: 16px">
       <pre style="opacity: 0.7">{{ data }}</pre>
