--- a/websocket-send-time.html
+++ b/websocket-send-time.html
@@ -75,7 +75,7 @@
     </script>
   </head>
   <body>
-    <h2>Timetrip - Send time</h2>
+    <h2>Timetrip - Send time ...</h2>
     Start time from: <input id="minutes" type="text" size="2" value="00" /> :
     <input id="seconds" type="text" size="2" value="00" />
     <br />
