--- a/websocket-send-time.html
+++ b/websocket-send-time.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Websocket send time</title>
     <script src="https://unpkg.com/reconnecting-websocket@4.4.0/dist/reconnecting-websocket-iife.min.js"></script>
-    <script src="/lib/websocket.js"></script>
-    <script src="/lib/utils.js"></script>
+    <script src="lib/websocket.js"></script>
+    <script src="lib/utils.js"></script>
     <style>
       body {
         font-family: sans-serif;
