--- a/particles_editor.html
+++ b/particles_editor.html
@@ -50,6 +50,7 @@
         angularVelocity: { a: 0, b: -10, c: 0 },
         scale: 0.8,
         texture: "#blob",
+        offset: 0
       });
 
       const box = reactive({
@@ -113,6 +114,13 @@
         loop: true,
       });
 
+      // animation({
+      //   targets: data2,
+      //   offset: -5,
+      //   duration: dur * 10,
+      //   easing: "easeOutSine",
+      // });
+
       createApp({
         fields,
         data,
@@ -121,8 +129,7 @@
         isNumber,
         angle: 80,
         box,
-        speed: 1,
-        offset: 0
+        speed: 2,
       }).mount();
     </script>
   </head>
@@ -139,7 +146,7 @@
         <a-entity :rotation="box.rotation"
           v-for="y in [1,1.2,2,4,4.3]"
           :position="{x: 0, y: 0, z: 0}"
-          :sprite-particles="normalizeParticles({...data2, radialPosition: { a: y - offset, b: y + offset }, radialVelocity: { a: 0, b: -10 * speed, c: 10 * speed },angularVelocity: { a: 10 * speed, b: -10 * speed, c: 0 }})"
+          :sprite-particles="normalizeParticles({...data2, radialPosition: { a: y - data2.offset, b: y + data2.offset}, radialVelocity: { a: 0, b: -10 * speed, c: 10 * speed },angularVelocity: { a: 10 * speed, b: -10 * speed, c: 0 }})"
         ></a-entity>
 
         <!-- <a-entity
